welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:9: error: too many arguments for method isFacingTrail: ()Boolean
    	while (!isFacingTrail(c)){gauche()}
                             ^SlugSnail:25: error: not found: value c
 == c) (r=true)
    ^